Fix: refactor traffic vehicle behavior and update renderers